Uploading blog in spanish

--- a/content/Learning Data visualization with Seaborn.ipynb
+++ b/content/Learning Data visualization with Seaborn.ipynb
@@ -4,26 +4,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Learning Data Visualization with Seaborn and Python.\n",
+    "# Aprendiendo a Visualizar datos con Seaborn y Python.\n",
     "\n",
-    "### In this project, we are going to present some samples on how to use seaborn to get a better visualization. \n",
+    "### En este proyecto vamos a mostrar algunas muestas de como usar seaborn para obtener mejores visualizaciones.\n",
     "\n",
-    "    - We are going to cover:\n",
-    "        - Creating an Histogram.\n",
-    "        - Generating a Density Plot.\n",
-    "        - Modifying the Appearence of the plots.\n",
-    "        - Conditional Distributions Using A Single Condition.\n",
-    "        - Creating Conditional Plots Using Two Conditions.\n",
-    "        - Creating Conditional Plots Using Three Conditions.\n",
-    "        - Adding a Legend\n",
-    "\n"
+    "\n",
+    "    - Vamos a ver:\n",
+    "        - Crear un Histograma.\n",
+    "        - Generar graficos de densidad.\n",
+    "        - Modificar la apariencia de los graficos.\n",
+    "        - Distribucion condicional usando una sola condicion, dos y tres condiciones.\n",
+    "        - Añadir una legenda para visualizar los datos.\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Creating an Histogram with Seaborn"
+    "### Creando un Histograma con Seaborn."
    ]
   },
   {
@@ -68,7 +66,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Generating A Kernel Density Plot"
+    "### Generando un Kernel Density Plot"
    ]
   },
   {
@@ -105,7 +103,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Modifying The Appearance Of The Plots"
+    "### Modificando la apariencia de los graficos."
    ]
   },
   {
@@ -163,7 +161,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Conditional Distributions Using A Single Condition"
+    "### Distribucion condicional usando una unica condicion."
    ]
   },
   {
@@ -211,7 +209,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Creating Conditional Plots Using Two Conditions"
+    "### Distribucion condicional usando dos condiciones."
    ]
   },
   {
@@ -249,7 +247,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Creating Conditional Plots Using Three Conditions"
+    "### Distribucion condicional usando tres condiciones."
    ]
   },
   {
@@ -287,7 +285,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Adding a Legend"
+    "### Añadiendo la leyenda para nuestros graficos."
    ]
   },
   {
