--- a/content/proj_sql_relations.ipynb
+++ b/content/proj_sql_relations.ipynb
@@ -4,17 +4,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Creating Relations in SQL and Python\n",
+    "# Creando Relaciones en SQL y Python\n",
     "\n",
-    "### In this project we are going to create relations using Sqlite3 and python, we are going to:\n",
+    "### En este proyecto vamos a crear relaciones usando Sqite3 y Python.\n",
     "\n",
     "[TOC]\n",
     "\n",
-    "#### Creating The Ceremonies Table\n",
-    "#### Foreign Key Constraints\n",
-    "#### Setting Up One-To-Many\n",
-    "#### Deleting And Renaming Tables\n",
-    "#### Creating A Join Table\n"
+    "#### Crendo la tabla \"Ceremonias\"\n",
+    "#### Clave Foranea (Foreign Key, FK). Restricciones.\n",
+    "#### Relaciones una a muchos. 1:n y muchos a mucho (N:M)\n",
+    "#### Borrando y renombrando tablas.\n",
+    "#### Creando una \"Join Table\".\n"
    ]
   },
   {
@@ -82,7 +82,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Creating The Ceremonies Table"
+    "# Crendo la tabla \"Ceremonias\"\n"
    ]
   },
   {
@@ -134,7 +134,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "insert_query = \"INSERT INTO ceremonies (Year, Host) VALUES (?,?);\"\n",
@@ -144,7 +146,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "\n",
@@ -156,13 +160,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Foreign Key Constraints"
+    "# Clave Foranea (Foreign Key, FK). Restricciones."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "q_keys_on = \"PRAGMA foreign_keys = ON;\"\n",
@@ -173,7 +179,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Setting Up One-To-Many"
+    "#  Relaciones una a muchos. 1:n y muchos a mucho (N:M)"
    ]
   },
   {
@@ -248,7 +254,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Deleting And Renaming Tables"
+    "#  Borrando y renombrando tablas."
    ]
   },
   {
@@ -297,7 +303,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Creating A Join Table"
+    "# Creando una \"Join Table\"."
    ]
   },
   {
